# sfb

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
doc/: SequenceSFB.asta  diagrams.mdj  sfb.docx
include/: command.h  network.h  serial  sfb.h  sfb.h.in
src/: command.cpp  network.cpp  sfb.cpp
